# Torch-TRTLLM

./: .gitignore  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .ruff.toml  CREDITS  DEBUG.md  NOTICE  README.md  SECURITY.md  pyproject.toml  requirements-lint.txt  requirements.txt  setup.py
conda/: .gitignore  README.md  create_env.sh  environment.yml
docker/: Dockerfile
docker/scripts/: install_tensorrt.sh  setup_env.sh  tensorrt_llm.patch  torch_tensorrt.patch
docs/: DEBUG.md  GUIDE.md  draft-target-model-serving.md  vlm-serving.md
examples/llava/: README.md  build_llava.py
examples/qwen2_5_vl/: README.md  build_qwen2_5_vl_cpp_e2e.py  run.py
scripts/: apply_copyright_headers.py  compare.sh  inspect_aten_op.py  mmlu.py  modelopt_quantization.py  run.py  snapshot_download  test.sh  trtllm-build
src/ditto/: __init__.py  __main__.py  _compile.py  _convert.py  _export.py  _inline.py  api.py  arguments_for_export.py  aten_ops_converter.py  cache_handler.py  config.py  config_gen.py  constants.py  contexts.py  convert.py  dynamic_dim.py  export.py  fake_gpt_attention_plugin.py  forward_argument_collector.py  inline.py  interpreter.py  literals.py  logging.py  modelopt.py  patches.py  peft.py  pretty_print.py  quantization.py  transform.py  trt_graph.py  types.py  utils.py  wrappers.py
src/ditto/arguments/: __init__.py  dynamic_dim.py  tensor_type_hint.py  torch_export_arguments.py  trtllm_argument_hint.py
src/ditto/configs/: __init__.py  generate.py  torch_trtllm.py
src/ditto/configs/tensorrt/: __init__.py  builder.py  config.py  flags.py
src/ditto/configs/trtllm/: __init__.py  build.py  engine.py  literals.py  lora.py  model.py  optimization_profile.py  plugin.py  pretrained.py
src/ditto/conversion/: __init__.py  aten_ops_converter.py  aten_ops_converters.py  fake_target_converters.py  operator_converters.py  plugin_converters.py  tensorrt_converters.py
src/ditto/custom_ops/: __init__.py  dequantize.py  fake_quantize.py
src/ditto/debug/: __init__.py  constant.py  engine.py  fx.py  io.py  memory.py  mla.py  network.py  plugin.py
src/ditto/fake_targets/: __init__.py  fake_gpt_attention_plugin.py  gpt_attention_plugin.py  rope.py  transposed_mm.py
src/ditto/fx/: __init__.py  config_gen.py  fake_tensor_prop.py  metadata_keys.py  node_arguments.py  optimize.py  subgraphs.py  update_argument_hint.py  utils.py
src/ditto/fx/nodes/: __init__.py  asterick.py  asterisk.py  binary_elementwise_nodes.py  call_function.py  call_function_node.py  combine_nodes.py  copy_nodes.py  dequantize.py  embedding_node.py  fake_quantize.py  fake_target_nodes.py  get_attr.py  get_attr_node.py  index_select_node.py  mm_const.py  mm_nodes.py  modelopt_quantizer.py  node_specialization.py  operator.py  placeholder.py  plugin_specialization.py  plugins.py  reduction_nodes.py  reformatting_nodes.py  rmsnorm_quantization.py  rope.py  scaled_dot_product_attention.py  slice_node.py  specialized_node.py  split_node.py  unary_elementwise_nodes.py
src/ditto/fx/passes/: __init__.py  add_trtllm_inputs.py  bind_unmatched_lora_protos.py  canonicalize_copy.py  canonicalize_moe_allreduces.py  cast_mm_const_to_fp32.py  cast_mm_to_fp32.py  cast_output_logits.py  cast_router_to_fp32.py  constant_folding.py  constant_sharing.py  decompose_addmm.py  decompose_silu.py  defer_cast.py  defer_unsqueeze.py  eliminate_common_expressions.py  eliminate_copy.py  eliminate_empty_tensors_from_cat_or_stack.py  eliminate_nop_cat_or_stack.py  eliminate_nop_permute.py  eliminate_nop_reshape.py  eliminate_nop_reshape_or_expand.py  eliminate_nop_slice.py  eliminate_unique_clone.py  eliminate_unsqueeze_squeeze.py  eliminate_unused_weights.py  fix_activation_precision.py  fix_binary_elementwise_op_overloads.py  fix_slice_ranges.py  forget_submodules.py  fuse_consecutive_permutes.py  fuse_consecutive_reshapes.py  fuse_consecutive_slice_concat.py  fuse_consecutive_split_concat.py  fuse_consecutive_to_copys.py  fuse_dequantizes.py  fuse_equivalent_nodes.py  fuse_fake_quantizes.py  fuse_gated_mlp_projections.py  fuse_linear_siblings.py  (+68 more)
src/ditto/fx/subgraphs/: __init__.py  activations.py  decoder_layer.py  fused_linear.py  gated_mlp.py  linear.py  lora.py  mm_const.py  moe.py  one_hot.py  path.py  rmsnorm.py  (+7 more)
src/ditto/patches/: __init__.py  auto_awq.py  auto_gptq.py  compressed_tensors.py  modelopt.py  patch.py  remote_transformers.py  torch.py  torch_tensorrt.py  transformers.py  trtllm.py
src/ditto/tensorrt/: __init__.py  session.py
src/ditto/torch/: __init__.py
(+61 files in other folders)
