[build-system]
requires = ["setuptools>=64.0", "pip"]
build-backend = "setuptools.build_meta"

[project]
name = "ditto"
authors = [{ name = "SqueezeBits.inc", email = "owlite@squeezebits.com" }]
maintainers = [{ name = "SqueezeBits.inc", email = "owlite@squeezebits.com" }]
description = "Ditto - Direct Torch to TensorRT-LLM Optimizer"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
keywords = [
    "pytorch",
    "transformer",
    "torch",
    "tensorrt",
    "torch-tensorrt",
    "tensorrt-llm",
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch==2.7.0",
    "mpi4py==3.*",
    "peft",
    "tensorrt-llm==0.20.0",
    # "torch-tensorrt == 2.7.0",
    "loguru",
    "typer",
    "autoawq",
    "compressed-tensors",
]
dynamic = ["version"]

[project.urls]
repository = "https://github.com/SqueezeBits/Torch-TRTLLM"

[project.scripts]
ditto = "ditto.__main__:app"

[tool.setuptools.dynamic]
version = { attr = "ditto.__version__" }
